Fix positioning on Firefox

--- a/Lab5/styles/custom.css
+++ b/Lab5/styles/custom.css
@@ -116,7 +116,6 @@ label {
 
 .section-end {
   height: 50px;
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
